configs/h2o/namespace_h2o.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: h2o-cluster
  labels:
    name: h2o-cluster
