configs/h2o/deployment_stateful_set_h2o.yaml
# It is strongly recommended to run H2O as a Stateful set on a Kubernetes cluster. Kubernetes assumes 
# all the pods inside the cluster are stateful and does not attempt to restart the individual pods on 
# failure. Once a job is triggered on an H2O cluster, the cluster is locked and no additional nodes can 
# be added. Therefore, the cluster has to be restarted as a whole if required – which is a perfect fit 
# for a StatefulSet.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: h2o-stateful-set
  namespace: h2o-cluster
spec:
  serviceName: h2o-service
  replicas: 3
  selector:
    matchLabels:
      app: h2o-k8s  # Should match service name. 
  template:
    metadata:
      labels:
        app: h2o-k8s
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: h2o-k8s
          image: cloudberry/h2o-arm64
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1Gi" # Control allocated mem. 
          ports:
            - containerPort: 54321
              protocol: TCP
              #readinessProbe:
              #httpGet:
              #path: /kubernetes/isLeaderNode
              #port: 8080
              #initialDelaySeconds: 5
              #periodSeconds: 5
              #failureThreshold: 1
